# wgpu

./: .gitignore  Cargo.toml
examples/: debug_simulation.rs  fire_simulation.rs
src/: collision_simulation.rs  debug_simulation.rs  fire_simulation.rs  game_engine.rs  lib.rs  main.rs  spatial_subdivision.rs  state.rs  texture.rs  world.rs
src/collision_simulation/: collision_simulation.rs  mod.rs  spatial_subdivision.rs
src/engine/: broadphase.rs  collision.rs  constraint.rs  engine.rs  game_engine.rs  init_utils.rs  mod.rs  narrowphase.rs  run.rs  simulation.rs
src/engine/physics_engine/: collision.rs  mod.rs
src/engine/physics_engine/broadphase/: blockmap.rs  mod.rs  sweep_and_prune.rs
src/engine/physics_engine/constraint/: box_constraint.rs  circle_constraint.rs  mod.rs
src/engine/physics_engine/integrator/: mod.rs  (+1 more)
src/engine/renderer_engine/: graphics_context.rs  instance.rs  mod.rs  render_pass.rs  vertex.rs
src/examples/: mod.rs
src/old/simulation/: collision_simulation.rs  gravity_simulation.rs  particle_fire_simulation.rs
src/renderer_backend/: graphics_context.rs  instance.rs  mod.rs  pipeline_builder.rs  render_pass.rs  vertex.rs
src/renderer_backend/gray/: gray.rs
src/shaders/: shader.wgsl
src/shapes/: circle.rs  mod.rs  triangle.rs
src/simulation/: collision_simulation.rs  gravity_simulation.rs  mod.rs  particle_fire_simulation.rs  spatial_subdivision.rs  verlet_collision_simulation.rs  verlet_integration.rs
src/simulation/solvers/: mod.rs  util.rs
src/simulation/util/: collision_detection.rs  collision_response.rs  mod.rs
(+19 files in other folders)
