[package]
name = "rust-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version="0.24", deafault-features=false, features=["png", "jpeg"]}
bytemuck = {version = "1.15.0", features = ["derive"]}
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.15"
anyhow = "1.0.81"
rand = "0.8.5"
cgmath = "0.18.0"
